# tanuki

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  PerformanceRecords.md  README.md  helpText.h  main.cc  pinpon.sublime-project  pinpon.sublime-settings  pinpon.sublime-syntax  pinpon.sublime-workspace  tanuki-alias.sh  tanuki-lib.tnk  tanuki.sublime-syntax  もし.pin  ユーザー関数.pin  例文.pin  関数.pin
.github/workflows/: ccpp.yml
docker/: Dockerfile-tanukiweb  Dockerfile-ubuntu-oracular
docs/: index.md
dynamic/: main.cc  main.h
example/: assign.pin  codingquestions.pin  codingquestions.tnk  designIdeas.tnk  dict.pin  env.pin  fileInputSource.tnk  hof.pin  import.pin  importDynamicLibrary.pin  importDynamicLibrary.tnk  kanjiNumbers.tnk  kwargs.pin  obj.pin  passedClosure.tnk  tail.pin  tailop.pin  test.pin  var.pin  もし.pin  もし.tnk  ユーザー関数.pin  例文.pin  文字.pin  無限ループ.pin  辞書例文.pin  関数.pin
interactive/: CMakeLists.txt  main.cc  resources.xml  style.css
interactive/macros/: BuildTargetScript.cmake  CompileGResources.cmake  GenerateGXML.cmake
pikatanuki/: CMakeLists.txt  Readme.md  ServerLogger.cc  ServerLogger.h  TanukiServer.cc  TanukiServer.h  TanukiServerExec.cc  TanukiServerExec.h  TanukiServerREPL.cc  TanukiServerREPL.h  main.cc  starterEvaluator.cc  starterEvaluator.h
pikatanuki/client/: .babelrc  .gitignore  README.md  package-lock.json  package.json  webpack.config.js
pikatanuki/client/public/: index.html
pikatanuki/client/questions/answers/: 3.pin  4.pin  5.pin  6.pin
pikatanuki/client/questions/code/: 1.pin  2.pin  3.pin  4.pin  5.pin  6.pin
pikatanuki/client/questions/test/: 1.pin  2.pin  3.pin  4.pin  5.pin  6.pin  7.pin
pikatanuki/client/src/: App.css  App.js  App.test.js  Edit.css  Edit.js  Guide.js  Home.js  Interact.js  Interact.test.js  LoginRepository.js  QuestionsRepo.js  SocketRepo.js  guide.css  index.js  languageDef.js  reference.md  sampleCode.js
qtpinpon/: CMakeLists.txt  Sportsbettingspot-Summer-Olympics-Table-tenis.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pinpon.icns  qtpinpon.pro  resources.qrc
rank/: .dockerignore  Dockerfile  Readme.md  package-lock.json  package.json  server.js
src/: Context.cc  Context.h  CoreFunctions.cc  CoreFunctions.h  Environment.cc  Environment.h  Evaluate.cc  Evaluate.h  Extension.cc  Extension.h  FileHandler.h  Filesystem.cc  Filesystem.h  InputSource.cc  InputSource.h  Logger.cc  Logger.h  Parser.cc  Parser.h  ParserCore.cc  Tokenizer.cc  Tokenizer.h  Value.cc  Value.h  core.pin  core.tnk  main.cc  pathutils.cc  pathutils.h
src/Lexer/: LexerConstants.h  Matcher.cc  Matcher.h  NumericConversion.cc  NumericConversion.h  TanukiTokenizer.cc  Token.cc  Token.h  TokenProcessor.cc  TokenProcessor.h  Tokenizer.cc  Tokenizer.h
src/Lexer/Matchers/: MatcherComment.cc  MatcherComment.h  MatcherComparison.cc  MatcherComparison.h  MatcherEOF.cc  MatcherEOF.h  MatcherNewline.cc  MatcherNewline.h  MatcherNumberLiteral.cc  MatcherNumberLiteral.h  MatcherSingleCharacter.cc  MatcherSingleCharacter.h  MatcherString.cc  MatcherString.h  MatcherSymbol.cc  MatcherSymbol.h
src/Parser/: GenericParser.cc  GenericParser.h  Parser.cc  Parser.h  ParserCore.cc  SyntaxNode.cc  SyntaxNode.h
src/Runtime/: Context.cc  Context.h  CoreFunctions.cc  CoreFunctions.h  Environment.cc  Environment.h  Value.cc  Value.h
src/TextInput/: CharDefinitions.cc  CharDefinitions.h  FileInputSource.cc  FileInputSource.h  InputSource.h  StringInputSource.cc  StringInputSource.h  UnicodeConversion.cc  UnicodeConversion.h
test/: CoreFunctionsTest.cc  EnvironmentTest.cc  EvalTest.cc  InputSourceTest.cc  LexerTest.cc  MockFunction.h  ParserTest.cc  TestMain.cc  TokenizerTest.cc  main.cc
testpin/: framework.pin  framework.tnk  tests.pin  tests.tnk
vsext/pin/: CHANGELOG.md  README.md  package-lock.json  package.json  pin-0.0.1.vsix  vsc-extension-quickstart.md
vsext/pin/syntaxes/: pin.tmLanguage.json
